# SYCL-Fractal-Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
